--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,9 +134,7 @@ CurrentScalingGridSize=4
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB.M_M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -197,7 +195,7 @@ MaterialExpressionConstant3Vector="\"Object\" \"Object.Constant\" "
 Font="\"Object\" \"Object.Font\" "
 AssetViewerSettings="\"Object\" "
 StaticMesh="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
 MapBuildDataRegistry="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSampleParameter="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSample="\"Object\" "
@@ -377,6 +375,16 @@ LogVisualizerSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
 ProceduralFoliageSpawner="\"Object\" \"Object.ProceduralFoliageSimulation.FoliageTypes\" "
 ProceduralFoliageVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+DisplaceMeshCommonProperties="\"Object\" "
+DisplaceMeshDirectionalFilterProperties="\"Object\" "
+DisplaceMeshPerlinNoiseProperties="\"Object\" "
+DisplaceMeshTextureMapProperties="\"Object\" "
+Texture2D="\"Object\" \"Object.Texture.SourceColorSettings\" "
+Texture="\"Object\" \"Object.Texture.SourceColorSettings\" "
+CreateMeshObjectTypeProperties="\"Object\" "
+ProceduralRectangleToolProperties="\"Object\" "
+ProceduralShapeToolProperties="\"Object\" "
+NewMeshMaterialProperties="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -1315,6 +1323,8 @@ HierarchicalLODUtilities.TimeStamp=2023.09.07-10.35.07
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 WebBrowser.TimeStamp=2022.07.27-04.22.04
 WebBrowser.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2023.09.07-10.35.16
+TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1322,7 +1332,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/books
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -2260,8 +2270,33 @@ ProceduralFoliageVolume.HLOD=True
 ProceduralFoliageVolume.Navigation=True
 ProceduralFoliageVolume.Replication=True
 ProceduralFoliageVolume.Actor=True
+DisplaceMeshCommonProperties.Options=True
+DisplaceMeshDirectionalFilterProperties.DirectionalFilterOptions=True
+DisplaceMeshPerlinNoiseProperties.PerlinNoiseOptions=True
+DisplaceMeshTextureMapProperties.Options=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+CreateMeshObjectTypeProperties.OutputType=True
+ProceduralRectangleToolProperties.Shape=True
+ProceduralRectangleToolProperties.Asset=True
+ProceduralRectangleToolProperties.Positioning=True
+NewMeshMaterialProperties.Material=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/floor_mat.floor_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner.NewProceduralFoliageSpawner;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red.closed_book_mat_red;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green.closed_book_mat_green;
@@ -2281,16 +2316,14 @@ RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_
 RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP.MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP;
 RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K.MI_Wooden_Planks_ueynbafew_4K;
 RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K.MI_Wooden_Floor_wdipfjw_4K;
-RecentlyPlaced=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K.MI_Wall_Paint_sj0jecrc_4K;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,
+MaterialInstanceConstant=
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2422,26 +2455,26 @@ LogVisualizerSettings=EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFil
 FoliageType_InstancedStaticMesh=FoliageType_InstancedStaticMesh.Procedural.Collision,FoliageType_InstancedStaticMesh.Procedural.Clustering,FoliageType_InstancedStaticMesh.Procedural.Growth,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LevelPrototyping/Meshes/M_SM_Cube_NewMaterial_38FB1D8244DA5DA4F0B722940A4268AD
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB
-MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
-MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
-MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
-MRUItem11=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
-MRUItem12=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
-MRUItem13=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
-MRUItem14=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
-MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
+MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/floor_mat
+MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement
+MRUItem3=/Game/LevelPrototyping/Meshes/M_SM_Cube_NewMaterial_38FB1D8244DA5DA4F0B722940A4268AD
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
+MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
+MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
+MRUItem13=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
+MRUItem14=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
+MRUItem15=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
+MRUItem16=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2496,6 +2529,10 @@ MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_ma
 /Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial=1
 /Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green.closed_book_mat_green=1
 /Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red.closed_book_mat_red=1
+/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/floor_mat.floor_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB.M_M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB=1
+/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement.whnfbg3_4K_Displacement_0=1
+/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement.whnfbg3_4K_Displacement=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -2616,6 +2653,8 @@ FoliageType_InstancedStaticMesh.Painting=True
 PreviewMaterial.Material=True
 SpotLight.Light=False
 StaticMeshActor.Materials=True
+Texture2D.Texture=True
+CapsuleComponent.Physics=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2857,4 +2896,7 @@ bTextAssetFormatSupport=False
 bEnableLongPathsSupport=False
 bPackedLevelActor=True
 bLevelInstance=True
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
 
