--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,11 +127,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CameraSpeed=3
 CurrentRotGridSize=2
-GridEnabled=False
 CurrentScalingGridSize=4
 
 [EditorStartup]
-LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
+LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -167,8 +166,8 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
-WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
-Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+WorldSettings=
+Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
@@ -385,6 +384,11 @@ CreateMeshObjectTypeProperties="\"Object\" "
 ProceduralRectangleToolProperties="\"Object\" "
 ProceduralShapeToolProperties="\"Object\" "
 NewMeshMaterialProperties="\"Object\" "
+CameraComponent="\"Object\" "
+PointLightComponent="\"Object\" "
+LocalLightComponent="\"Object\" "
+LightComponent="\"Object\" "
+LightComponentBase="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -1325,6 +1329,8 @@ WebBrowser.TimeStamp=2022.07.27-04.22.04
 WebBrowser.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2023.09.07-10.35.16
 TextureEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.07.27-04.21.14
+BlueprintGraph.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1332,7 +1338,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -2294,6 +2300,53 @@ CapsuleComponent.Collision=True
 CapsuleComponent.Rendering=True
 CapsuleComponent.Tags=True
 CapsuleComponent.Cooking=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
+WorldSettings.WorldPartition=True
+WorldSettings.Broadphase=True
+WorldSettings.Foliage=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
+BP_FirstPersonCharacter_C.Default=True
+BP_FirstPersonCharacter_C.Tick=True
+BP_FirstPersonCharacter_C.Character=True
+BP_FirstPersonCharacter_C.Camera=True
+BP_FirstPersonCharacter_C.Pawn=True
+BP_FirstPersonCharacter_C.Replication=True
+BP_FirstPersonCharacter_C.Rendering=True
+BP_FirstPersonCharacter_C.Actor=True
+BP_FirstPersonCharacter_C.Collision=True
+BP_FirstPersonCharacter_C.HLOD=True
+BP_FirstPersonCharacter_C.Input=True
+BP_FirstPersonCharacter_C.WorldPartition=True
+BP_FirstPersonCharacter_C.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Events=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.HLODSystem=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/floor_mat.floor_mat;
@@ -2453,28 +2506,30 @@ GameplayDebuggerUserSettings=EditorKeyboardShortcutSettings.LevelEditor.OpenFavo
 GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 LogVisualizerSettings=EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 FoliageType_InstancedStaticMesh=FoliageType_InstancedStaticMesh.Procedural.Collision,FoliageType_InstancedStaticMesh.Procedural.Clustering,FoliageType_InstancedStaticMesh.Procedural.Growth,
+WorldSettings=WorldSettings.WorldPartition.None,
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/floor_mat
-MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement
-MRUItem3=/Game/LevelPrototyping/Meshes/M_SM_Cube_NewMaterial_38FB1D8244DA5DA4F0B722940A4268AD
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
-MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
-MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
-MRUItem13=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
-MRUItem14=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
-MRUItem15=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
-MRUItem16=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
+MRUItem2=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/floor_mat
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement
+MRUItem7=/Game/LevelPrototyping/Meshes/M_SM_Cube_NewMaterial_38FB1D8244DA5DA4F0B722940A4268AD
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
+MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
+MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
+MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
+MRUItem16=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
+MRUItem17=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
+MRUItem18=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
+MRUItem19=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2533,6 +2588,7 @@ MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_m
 /Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB.M_M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB=1
 /Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement.whnfbg3_4K_Displacement_0=1
 /Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement.whnfbg3_4K_Displacement=1
+/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -2604,9 +2660,10 @@ PreserveScaleRatio=True
 
 [MRU]
 MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem2=/Game/StarterContent/Maps/StarterMap
-MRUItem3=/Game/OurProject/Maps/CabinInWoods
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
+MRUItem2=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem3=/Game/StarterContent/Maps/StarterMap
+MRUItem4=/Game/OurProject/Maps/CabinInWoods
 
 [LandscapeEdit]
 ToolStrength=0.0560000017
@@ -2899,4 +2956,47 @@ bLevelInstance=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
