--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,7 +133,8 @@ CurrentScalingGridSize=4
 LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner.Forest_ProceduralFoliageSpawner
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -194,7 +195,7 @@ MaterialExpressionConstant3Vector="\"Object\" \"Object.Constant\" "
 Font="\"Object\" \"Object.Font\" "
 AssetViewerSettings="\"Object\" "
 StaticMesh="\"Object\" "
-StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
+StreamableRenderAsset="\"Object\" "
 MapBuildDataRegistry="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSampleParameter="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSample="\"Object\" "
@@ -1356,7 +1357,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/grass
+ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2510,26 +2511,26 @@ WorldSettings=WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
-MRUItem2=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/floor_mat
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement
-MRUItem7=/Game/LevelPrototyping/Meshes/M_SM_Cube_NewMaterial_38FB1D8244DA5DA4F0B722940A4268AD
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
-MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
-MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
-MRUItem16=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
-MRUItem17=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
-MRUItem18=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
-MRUItem19=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/GrassStaticMeshFoliage
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/Grass
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
+MRUItem5=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem6=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/floor_mat
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement
+MRUItem10=/Game/LevelPrototyping/Meshes/M_SM_Cube_NewMaterial_38FB1D8244DA5DA4F0B722940A4268AD
+MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
+MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
+MRUItem19=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2589,6 +2590,9 @@ MRUItem19=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
 /Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement.whnfbg3_4K_Displacement_0=1
 /Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/whnfbg3_4K_Displacement.whnfbg3_4K_Displacement=1
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/Grass_big.Grass_big=1
+/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner.Forest_ProceduralFoliageSpawner=1
+/Game/OurProject/Maps/Forest_Scene/Assets/GrassStaticMeshFoliage.GrassStaticMeshFoliage=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -2697,8 +2701,8 @@ PaletteThumbnailScale=0.300000012
 IsInSingleInstantiationMode=False
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
-Radius=224.553223
-PaintDensity=0.440000117
+Radius=253.52832
+PaintDensity=0.75
 
 [DetailCategoriesAdvanced]
 Landscape.LOD=False
