--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -135,6 +135,7 @@ LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner.Forest_ProceduralFoliageSpawner
+OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/GrassStaticMeshFoliage.GrassStaticMeshFoliage
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2511,8 +2512,8 @@ WorldSettings=WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/GrassStaticMeshFoliage
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/GrassStaticMeshFoliage
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner
 MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/Grass
 MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
 MRUItem4=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
