--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,8 +134,6 @@ LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/proceduralFoliage/Forest_ProceduralFoliageSpawner.Forest_ProceduralFoliageSpawner
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/proceduralFoliage/GrassStaticMeshFoliage.GrassStaticMeshFoliage
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -391,6 +389,7 @@ PointLightComponent="\"Object\" "
 LocalLightComponent="\"Object\" "
 LightComponent="\"Object\" "
 LightComponentBase="\"Object\" "
+ProceduralFoliageBlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -1358,7 +1357,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/flowers
+ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/proceduralFoliage
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2349,9 +2348,20 @@ CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Events=True
 WorldSettings.WorldPartitionSetup=True
 WorldSettings.HLODSystem=True
+ProceduralFoliageBlockingVolume.TransformCommon=True
+ProceduralFoliageBlockingVolume.BrushSettings=True
+ProceduralFoliageBlockingVolume.ProceduralFoliage=True
+ProceduralFoliageBlockingVolume.HLOD=True
+ProceduralFoliageBlockingVolume.Collision=True
+ProceduralFoliageBlockingVolume.Navigation=True
+ProceduralFoliageBlockingVolume.Tags=True
+ProceduralFoliageBlockingVolume.Cooking=True
+ProceduralFoliageBlockingVolume.Replication=True
+ProceduralFoliageBlockingVolume.Actor=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner.Forest_ProceduralFoliageSpawner;
+RecentlyPlaced=/Script/Foliage.ProceduralFoliageBlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_3
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/proceduralFoliage/Forest_ProceduralFoliageSpawner.Forest_ProceduralFoliageSpawner;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/floor_mat.floor_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner.NewProceduralFoliageSpawner;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red.closed_book_mat_red;
@@ -2370,7 +2380,6 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP.MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP;
-RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K.MI_Wooden_Planks_ueynbafew_4K;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
