--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2361,6 +2361,7 @@ ProceduralFoliageBlockingVolume.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Foliage.ProceduralFoliageBlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_3
+RecentlyPlaced=/Script/Foliage.ProceduralFoliageVolume;/Engine/Transient.ActorFactoryBoxVolume_4
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/proceduralFoliage/Forest_ProceduralFoliageSpawner.Forest_ProceduralFoliageSpawner;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/floor_mat.floor_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner.NewProceduralFoliageSpawner;
@@ -2379,7 +2380,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Small_Concrete_Planter_Pack_vddifdqiw/S
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP.MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
