--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,7 +133,7 @@ CurrentScalingGridSize=4
 LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -392,7 +392,7 @@ LightComponentBase="\"Object\" "
 ProceduralFoliageBlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [Directories2]
-UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
+UNR=D:/Unreal Projects/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
 BRUSH=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBX=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBXAnim=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
