--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,12 +128,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=3
 CurrentRotGridSize=2
 CurrentScalingGridSize=4
+GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
+LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2360,6 +2361,7 @@ ProceduralFoliageBlockingVolume.Replication=True
 ProceduralFoliageBlockingVolume.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/bookshelf.bookshelf;
 RecentlyPlaced=/Script/Foliage.ProceduralFoliageBlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_3
 RecentlyPlaced=/Script/Foliage.ProceduralFoliageVolume;/Engine/Transient.ActorFactoryBoxVolume_4
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/proceduralFoliage/Forest_ProceduralFoliageSpawner.Forest_ProceduralFoliageSpawner;
@@ -2379,7 +2381,6 @@ RecentlyPlaced=/Game/Megascans/3D_Plants/Bigleaf_Hydrangea_vgztealha/S_Bigleaf_H
 RecentlyPlaced=/Game/Megascans/3D_Assets/Small_Concrete_Planter_Pack_vddifdqiw/S_Small_Concrete_Planter_Pack_vddifdqiw_lod0_Var5.S_Small_Concrete_Planter_Pack_vddifdqiw_lod0_Var5;
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
