I do not like unreal + github

--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ SnapScaleEnabled=False
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown.closed_book_brown
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor.closed_book_initialShadingGroup_BaseColor
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1.closed_book_initialShadingGroup_BaseColor1
@@ -177,7 +177,7 @@ WorldSettings=
 Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Texture.SourceColorSettings\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -1338,8 +1338,8 @@ ExternalImagePicker.TimeStamp=2022.09.18-05.50.02
 ExternalImagePicker.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2023.09.07-10.35.07
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-WebBrowser.TimeStamp=2022.07.27-04.22.04
-WebBrowser.LastCompileMethod=Unknown
+WebBrowser.TimeStamp=2023.09.07-10.35.19
+WebBrowser.LastCompileMethod=External
 TextureEditor.TimeStamp=2023.09.07-10.35.16
 TextureEditor.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2022.07.27-04.21.14
@@ -1351,7 +1351,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/books/red
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -1372,21 +1372,21 @@ ContentBrowserDrawer.EnabledFrontendFilters=
 ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
-FavoritePaths=
+FavoritePaths=/Game/OurProject/Maps/bedroom_scene/assets
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
-ContentBrowserTab1.FavoritesAreaExpanded=False
-ContentBrowserTab1.PathAreaExpanded=True
+ContentBrowserTab1.FavoritesAreaExpanded=True
+ContentBrowserTab1.PathAreaExpanded=False
 ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.FavoritesSearchAreaExpanded=False
 ContentBrowserTab1.PathSearchAreaExpanded=False
 ContentBrowserTab1.CollectionSearchAreaExpanded=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.391211152
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.508788645
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.448929459
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.451069951
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
@@ -2399,6 +2399,7 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Blanket_Chest_wbendbz/S_Wooden_B
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,
@@ -2631,6 +2632,10 @@ MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/clean_texture/New
 /Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_4E7A8C6A4D10B029EAECAB95CDBE3C1F.M_M_bookshelf_NewMaterial1_4E7A8C6A4D10B029EAECAB95CDBE3C1F=1
 /Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var6_lod1.S_Money_Plant_uchmfdyia_Var6_lod1=1
 /Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor.closed_book_initialShadingGroup_BaseColor=1
+/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown.closed_book_brown=1
+/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor.closed_book_initialShadingGroup_BaseColor=1
+/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1.closed_book_initialShadingGroup_BaseColor1=1
+/Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor.closed_book_initialShadingGroup_BaseColor=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
