--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,19 +128,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=3
 CurrentRotGridSize=2
 CurrentScalingGridSize=4
-GridEnabled=False
-RotGridEnabled=False
 SnapScaleEnabled=False
+CurrentPosGridSize=3
 
 [EditorStartup]
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown.closed_book_brown
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor.closed_book_initialShadingGroup_BaseColor
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1.closed_book_initialShadingGroup_BaseColor1
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor.closed_book_initialShadingGroup_BaseColor
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -173,11 +168,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
-WorldSettings=
-Info=
+WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Texture.SourceColorSettings\" "
+Object="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -331,7 +326,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 PointLight="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
-Light="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
+Light=
 StaticMeshComponent="\"Object\" "
 EditorStyleSettings="\"Object\" \"Object.Graphs.GraphBackgroundBrush\" \"Object.Graphs.GraphBackgroundBrush.TintColor\" \"Object.Graphs.GraphBackgroundBrush.OutlineSettings.Color\" "
 AudioEditorSettings="\"Object\" "
@@ -1351,7 +1346,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/books/red
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -1380,22 +1375,22 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.FavoritesAreaExpanded=True
-ContentBrowserTab1.PathAreaExpanded=False
+ContentBrowserTab1.PathAreaExpanded=True
 ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.FavoritesSearchAreaExpanded=False
 ContentBrowserTab1.PathSearchAreaExpanded=False
 ContentBrowserTab1.CollectionSearchAreaExpanded=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.448929459
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.451069951
-ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
-ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.115166008
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.884833753
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.PluginFilters=
-ContentBrowserTab1.Favorites.SelectedPaths=
+ContentBrowserTab1.Favorites.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
@@ -2534,7 +2529,7 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.LevelEditor.OpenFav
 LogVisualizerSettings=EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 FoliageType_InstancedStaticMesh=FoliageType_InstancedStaticMesh.Procedural.Collision,FoliageType_InstancedStaticMesh.Procedural.Clustering,FoliageType_InstancedStaticMesh.Procedural.Growth,
 WorldSettings=WorldSettings.WorldPartition.None,
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
+WorldPartitionRuntimeSpatialHash=
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
 
 [ContentBrowserRecent]
