--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,7 +134,8 @@ CurrentPosGridSize=1
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base.hanging_pot_base
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -149,9 +150,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-514.000 Y=494.000
+ScreenPosition=X=0.000 Y=306.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2374,6 +2375,9 @@ Light.WorldPartition=True
 Light.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope.hanging_pot_rope;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base.hanging_pot_base;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot.hanging_pot;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K.MI_Wall_Paint_sj0jecrc_4K;
 RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Brown.MI_Solid_Brown;
@@ -2391,9 +2395,6 @@ RecentlyPlaced=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/T_Money_Plant_uch
 RecentlyPlaced=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var1_lod1.S_Money_Plant_uchmfdyia_Var1_lod1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Plaster_Pot_ubylbdhiw/S_Worn_Plaster_Pot_ubylbdhiw_lod3.S_Worn_Plaster_Pot_ubylbdhiw_lod3;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Flower_Pot_tmrlbdaiw/S_Flower_Pot_tmrlbdaiw_lod0.S_Flower_Pot_tmrlbdaiw_lod0;
-RecentlyPlaced=/Game/Megascans/3D_Plants/Sage_ve3gbfoja/S_Sage_ve3gbfoja_Var11_lod1.S_Sage_ve3gbfoja_Var11_lod1;
-RecentlyPlaced=/Game/Megascans/3D_Plants/Sage_ve3gbfoja/S_Sage_ve3gbfoja_Var12_lod1.S_Sage_ve3gbfoja_Var12_lod1;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green.closed_book_mat_green;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2537,26 +2538,26 @@ WorldPartitionRuntimeSpatialHash=
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor
-MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor
-MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor
-MRUItem7=/Game/FirstPerson/Maps/_GENERATED/linch/M_Rectangle_C1164903_MI_English_Walnut_Parquet_udlxbgtl_4K_DCA5999346048737985276B0C993F4F8
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green
-MRUItem9=/Game/FirstPerson/Maps/_GENERATED/linch/Rectangle_C1164903
-MRUItem10=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var6_lod1
-MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial2_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1
-MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_074773F14DF4F383E391579B3EFC7966
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial_074773F14DF4F383E391579B3EFC7966
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial2_074773F14DF4F383E391579B3EFC7966
+MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/NewMaterial
+MRUItem2=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown
+MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor
+MRUItem9=/Game/FirstPerson/Maps/_GENERATED/linch/M_Rectangle_C1164903_MI_English_Walnut_Parquet_udlxbgtl_4K_DCA5999346048737985276B0C993F4F8
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green
+MRUItem11=/Game/FirstPerson/Maps/_GENERATED/linch/Rectangle_C1164903
+MRUItem12=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var6_lod1
+MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial2_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_074773F14DF4F383E391579B3EFC7966
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
